--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <!-- Rodapé AGRADEÇO A FRONT END MENTOR -->
       <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="#">Adriano</a>.
       </footer>
     </main>
     <script src="js/script.js"></script>
