--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <main>
       <div class="container">
         <!-- Modelo do cartão de crédito frente e verso -->
-        <div class="model-card">
-          <div class="front-model-card" aria-label="Visualizar informações do cartão de crédito como número, nome e data de validade." aria-hidden="true">
-            <img src="images/card-logo.svg" class="front-model-card__icon" alt="" aria-hidden="true">
+        <div class="model-card" aria-hidden="true">
+          <div class="front-model-card" aria-hidden="true">
+            <img src="images/card-logo.svg" class="front-model-card__icon" alt="">
             <div class="front-model-number-name-date">
               <p class="front-model-card__number">0000 0000 0000 0000</p>
               <div class="card-name-date">
@@ -23,8 +23,8 @@
               </div>
             </div>
           </div>
-          <div class="back-model-card" aria-label="Visualizar informações do verso do cartão como o número do CVC ou CVV." aria-hidden="true">
-            <p class="back-model-card__cvc" aria-label="Número do verso de cartão de crédito. Código CVC ou CVV">000</p>
+          <div class="back-model-card">
+            <p class="back-model-card__cvc">000</p>
           </div>
         </div>
         <!-- Fim do modelo do cartão de crédito frente e verso -->
