--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Frontend Mentor | Interactive card details form</title>
     <link rel="stylesheet" href="css/estilo_mobile.css">
     <link rel="stylesheet" media="(min-width: 575px)" href="css/estilo_desktop.css">
+    <script src="https://kit.fontawesome.com/f492772e4b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <main>
-      <h1 class="title-principal">Interactive card details form</h1>
       <div class="container">
         <!-- Modelo do cartão de crédito frente e verso -->
-        <div class="model-card" aria-hidden="true">
-          <div class="front-model-card" aria-hidden="true">
-            <img src="images/card-logo.svg" class="front-model-card__icon" alt="">
+        <div class="model-card">
+          <div class="front-model-card" aria-label="Visualizar informações do cartão de crédito como número, nome e data de validade." aria-hidden="true">
+            <img src="images/card-logo.svg" class="front-model-card__icon" alt="" aria-hidden="true">
             <div class="front-model-number-name-date">
               <p class="front-model-card__number">0000 0000 0000 0000</p>
               <div class="card-name-date">
@@ -24,8 +24,8 @@
               </div>
             </div>
           </div>
-          <div class="back-model-card">
-            <p class="back-model-card__cvc">000</p>
+          <div class="back-model-card" aria-label="Visualizar informações do verso do cartão como o número do CVC ou CVV." aria-hidden="true">
+            <p class="back-model-card__cvc" aria-label="Número do verso de cartão de crédito. Código CVC ou CVV">000</p>
           </div>
         </div>
         <!-- Fim do modelo do cartão de crédito frente e verso -->
@@ -88,7 +88,7 @@
       <!-- Rodapé AGRADEÇO A FRONT END MENTOR -->
       <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Adriano</a>.
+        Coded by <a href="#">Your Name Here</a>.
       </footer>
     </main>
     <script src="js/script.js"></script>
