--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- Final da seção de formulário para cadastro do cartão de crédito -->
 
         <!-- Seção de agradecimento por cadastrar -->
-        <section class="thank animOpacity1">
+        <section class="thank animOpacity1" aria-hidden="true" aria-alive="polite">
           <div class="thank-container">
             <h2 class="thank__title">Thank you!</h2>
             <img src="images/icon-complete.svg" class="thank__icon" alt="">
