--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Modelo do cartão de crédito frente e verso -->
         <div class="model-card">
           <div class="front-model-card" aria-label="Visualizar informações do cartão de crédito como número, nome e data de validade." aria-hidden="true">
-            <img src="images/card-logo.svg" class="front-model-card__icon" alt="" aria-hidden="true">
+            <img src="images/card-logo.svg" class="front-model-card__icon" alt="">
             <div class="front-model-number-name-date">
               <p class="front-model-card__number">0000 0000 0000 0000</p>
               <div class="card-name-date">
