--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- Campo de entrada de nome impresso no cartão -->
             <div class="card-name" aria-describedby="inptCaptionName">
               <label for="name" class="card-name__label" id="inptCaptionName">Cardholder Name</label>
-              <input type="text" autocomplete="name" class="card-name__field focus-ok" name="nomeCartao" id="name" maxlength="29" placeholder="e.g. Jane Appleseed" aria-required="true" required>
+              <input type="text" autocomplete="cc-name" class="card-name__field focus-ok" name="nomeCartao" id="name" maxlength="29" placeholder="e.g. Jane Appleseed" aria-required="true" required>
               <p class="msg-erro" id="msgNome">Teste</p>
             </div>
 
