--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             <div class="card-name" aria-describedby="inptCaptionName">
               <label for="name" class="card-name__label" id="inptCaptionName">Cardholder Name</label>
               <input type="text" autocomplete="cc-name" class="card-name__field focus-ok" name="nomeCartao" id="name" maxlength="29" placeholder="e.g. Jane Appleseed" aria-required="true" required>
-              <p class="msg-erro" id="msgNome">Teste</p>
+              <p class="msg-erro" id="msgNome" role="alert"></p>
             </div>
 
             <!-- Campo de entrada de número do cartão -->
             <div class="card-number" aria-describedby="inptCaptionNumber">
               <label for="number" class="card-number__label" id="inptCaptionNumber">Card Number</label>
               <input type="text" class="card-number__field focus-ok" autocomplete="cc-number" name="numeroCartao" id="number" maxlength="19" placeholder="e.g. 1234 5678 9123 0000" aria-required="true" required>
-              <p class="msg-erro" id="msgNumero">Teste</p>
+              <p class="msg-erro" id="msgNumero" role="alert"></p>
             </div>
 
             <!-- Campo de entrada data de validade -->
@@ -55,7 +55,7 @@
                   <input type="text" class="mes-year-field__mes focus-ok" name="mesValidade" autocomplete="cc-exp-month" id="mes" maxlength="3" placeholder="MM" aria-required="true" required>
                   <input type="text" class="mes-year-field__year focus-ok" name="anoValidade" autocomplete="cc-exp-year" id="ano" maxlength="3" placeholder="YY" aria-required="true" required>
                 </div>
-                <p class="msg-erro" id="msgDates">Teste</p>
+                <p class="msg-erro" id="msgDates" role="alert"></p>
               </div>
 
               <!-- Código de três digitos CVC -->
